@@ -1,5 +1,19 @@
 # DSMEditor
 An application for editing and designing Design Structure Matrices
 ### Dependencies
-  <http://www.jdom.org/downloads/> (XML Parser)
-  <https://gluonhq.com/products/javafx/> (Graphics Library)
+<http://www.jdom.org/downloads/> (XML Parser - NOTE: this is only needed to build the project)
+
+<https://gluonhq.com/products/javafx/> (Graphics Library)
+
+### To Run
+Download the .jar file from the releases page and run with
+
+<code>java -jar --module-path "path_to_javafx_sdk\javafx-sdk-11.0.2\lib" --add-modules=javafx.controls</code>
+
+### Project Status
+This project is in active development with commits every few days
+##### Coming Soon
+* Propagation analysis
+* More highlighting features
+* Export to <code>.csv</code> and <code>.png</code>
+* Portability testing
